--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -98,7 +98,9 @@
                         </span>
                         <% } %>
                     </div>
+                </div>
 
+                <div class="form-row">
                     <% if (forms.typeOf !== 'Product') { %>
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="serviceOutputCategory" class="bmd-label-static">
@@ -127,10 +129,14 @@
                     </div>
                     <% } %>
 
-                    <% if (forms.typeOf === 'MembershipService') { %>
+                    <% if (forms.typeOf === 'MembershipService' || forms.typeOf === 'PaymentCard') { %>
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="serviceType" class="bmd-label-static">
+                            <% if (forms.typeOf === 'MembershipService') { %>
                             メンバーシップ区分
+                            <% } else if (forms.typeOf === 'PaymentCard') { %>
+                            決済方法区分
+                            <% } %>
                         </label>
                         <select class="form-control" name="serviceType" id="serviceType" style="width: 100%;" <% if (!isNew && false) { %>
                             disabled="disabled" <% } %>>
