- 決済サービスにserviceTypeを追加

--- a/views/paymentServices/index.ejs
+++ b/views/paymentServices/index.ejs
@@ -55,6 +55,7 @@ PR-00
                                 <tr>
                                     <th>プロダクトID</th>
                                     <th>名称</th>
+                                    <th>ServiceType</th>
                                     <th>ServiceOutput</th>
                                     <th>プロバイダー</th>
                                     <th></th>
@@ -67,6 +68,11 @@ PR-00
                                     </td>
                                     <td name="name.ja">
                                         $name.ja$
+                                    </td>
+                                    <td name="id__serviceType.codeValue">
+                                        <a href="javascript:void(0)" class="showServiceType" data-id="$id$">
+                                            $serviceType.codeValue$
+                                        </a>
                                     </td>
                                     <td name="id__serviceOutput.typeOf">
                                         <a href="javascript:void(0)" class="showServiceOutput" data-id="$id$">
