- 決済サービスのproductIDを編集不可に変更

--- a/views/paymentServices/form.ejs
+++ b/views/paymentServices/form.ejs
@@ -63,13 +63,13 @@
                             maxlength=30 value="<%= forms.productID %>">
                         <span class="bmd-help">30文字以内でご入力ください</span>
                         <% } else { %>
-                        <input type="text" class="form-control" name="productID" id="productID" placeholder=""
-                            maxlength=30 value="<%= forms.productID %>">
+                        <!-- <input type="text" class="form-control" name="productID" id="productID" placeholder=""
+                            maxlength=30 value="<%= forms.productID %>"> -->
                         <span class="bmd-help">30文字以内でご入力ください</span>
-                        <!-- <input type="text" disabled class="form-control" placeholder="" maxlength=30
+                        <input type="text" disabled class="form-control" placeholder="" maxlength=30
                             value="<%= forms.productID %>">
                         <input type="hidden" class="form-control" name="productID" id="productID"
-                            value="<%= forms.productID %>"> -->
+                            value="<%= forms.productID %>">
                         <% } %>
 
                         <% if (errors && errors['productID']) { %>
